Content/site.css
/*h1, h2, h3, h4, h5, h6 {
        font-family: jubilat;
}
p, div {
        font-family: freight-sans-pro;
        font-style: normal;
        font-weight: 300;
        color: #364350;
}*/

/*#147FD7*/
body {
    font-size: 16px;
    line-height: 1.4;
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 300;
}
img {
    max-width: 100%;
    display: block;
}
.bernie-calc {
    padding-top: 150px;
}
a,
a:hover,
a:visited,
a:focus {
    color: #0076d7;
}
.navbar-inverse{
    background-color: #147FD7;
    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.06);
    border: none;
    height: 100px;
}
.navbar-inverse .navbar-brand {
    color: #fff;
    float: left;
}
.savings-placeholder, .savings-container{
    z-index:9999;
    transition: all .3s linear;
}
.savings .savings-text,
.savings .savings-amount {
    margin-left: -15px;
    margin-right: -15px;
    text-align: center;
}
.savings .savings-amount{
    font-size: 150%;
    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.06);
}
.savings>div:last-child {
    margin-bottom: 5px;
}
.savings > div > div {
    text-transform: uppercase;
    padding: 5px 0;
}
.savings > div:last-child {
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
}
.savings {

}
.floating {
    position: fixed;
    top: 100px;
    margin: 0 -15px;
}
@media (max-width: 990px){
    body {
        padding-top: 80px;
    }
}
@media (max-width: 480px) {
    .bernie-calc .navbar-inverse {
        height: 65px;
    }
    .bernie-calc .navbar-brand img {
        width: 65px;

    }
    .bernie-calc .navbar-brand {
        float: none;
    }
    .savings>div>div {
        font-size: 14px;
        /*margin: 0 2px;*/
    }
    .navbar-inverse .navbar-brand {
        float: none;
        margin: 0 auto;
    }
    .floating {
        top: 60px;
    }
}

.bernie-calc .jumbotron {
    background-color: #185378;
    color: #fff;
    border-radius: 0;
}
.bernie-calc .jumbotron .lead {
    padding: 15px 0;
}

.slider-selection {
	background: #149bdf;
}

.advanced-toggle {
	text-align: right;
	cursor: pointer;
}


.has_error>label{
	color:#a94442;
}
div.rounded {
    color: #fff;
    border-radius: 3px;
	background-color: #147FD7;
	padding: 9px 15px;
    text-transform: uppercase;
}
.bernie-calc .panel {
    background-color: #edf0f7;
}
.bernie-calc .panel-heading {
    font-size: 22px;
    font-weight: 200;
    text-transform: uppercase;
    background-color: #147FD7;
    color: #fff;
}
.bernie-calc .panel-footer{
	height: 60px;
}

.input-group,.form-group>input {
	width: 100%;
}
@media (min-width: 768px){
	.form-group label,
	.form-group input { float:left; display:inline;   }

	.advanced {
		display:none;
	}
	.form-group { margin-right:5px }

	.form-group label { line-height:29px; }

	.input-group,.form-group>input,.form-group>span.help-block {
		margin-left:250px;
		width: -moz-calc(100% - 250px);
		width: -webkit-calc(100% - 250px);
		width: calc(100% - 250px);
	}
}
.input-group-addon {
    border-radius: 0;
}
.input-group-addon.success {
    color: rgb(255, 255, 255);
    background-color: rgb(69, 211, 99);
    border-color: rgb(42, 179, 71);
}
.input-group-addon.info {
    color: #fff;
    background-color: #185378;
    border-color: #154868;
}
.input-group-addon.currency {
    color: rgb(255, 255, 255);
    background-color: rgb(133, 187, 101);
    border-color: rgb(110, 150, 80);
	cursor: default;
}
.whoLabel{
    width:100px;
}

.shareLinks{
    padding: 25px 5px 5px;
    display: block;
    float: left;
    position: relative;
}
/*.bernieText{
    color: #185378;
}*/
.bernieReplacing,
.bernieNew {
    text-transform: uppercase;
}
.bernieReplacing{
    background-color: #F55B5B;
    color: #fff;
    padding: 10px 15px 10px 10px;
    margin: 0px -10px 0px -10px;
}
.bernieNew{
    background-color: #147FD7;
    color: #fff;
    padding: 10px 15px 10px 10px;
    margin: 0px -10px 0px -10px;
}
.bernieNew.rounded-bottom{
    margin-bottom: 15px;
}
.dollarSign{
    position: absolute;
    z-index: 4;
    top: 7px;
    color: rgb(133, 187, 101);
}
.dollarSign:first-child {
    left: 8px;
}
.dollarSign:nth-child(2){
    left: 105px;
}
.bernie-calc select {
    border-radius: 0;
}
.form-control{
    padding: 6px 18px;
    height: 45px;
    border-radius: 0;
}
.sanders-logo {
    width: 175px;
    fill: #fff;
    display: block;
    stroke: #fff;
    stroke-width: 0;
}
.bg-success {
    color: #fff;
    background-color: #45d363;
    /*text-shadow: 0 2px 24px rgba(7, 8, 8, 0.75);*/
}
.bg-danger {
    color: #fff;
    background-color: #F55B5B;
    /*text-shadow: 0 2px 24px rgba(7, 8, 8, 0.75);*/
}
.btn {
    background-color: #F55B5B;
}

